clusters/main/kubernetes/apps/lldap/app/lldap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: lldap
      app.kubernetes.io/name: lldap
      pod.name: main
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: lldap
        app.kubernetes.io/name: lldap
        pod.name: main
    spec:
      automountServiceAccountToken: false
      containers:
        - name: lldap
          image: docker.io/nitnelave/lldap:v0.6.2-debian@sha256:713f8f1c7bb769bdcc7dc86b48838ec23e45ce45ab31d562544959360e96c109
          imagePullPolicy: IfNotPresent
          command:
            - /app/lldap
          args:
            - run
          ports:
            - name: ldap
              containerPort: 3890
            - name: main
              containerPort: 17170
          startupProbe:
            httpGet:
              path: /
              port: 17170
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /
              port: 17170
            initialDelaySeconds: 10
            periodSeconds: 12
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 4
          livenessProbe:
            httpGet:
              path: /
              port: 17170
            initialDelaySeconds: 12
            periodSeconds: 15
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          resources:
            limits:
              cpu: 1500m
              memory: 2400Mi
            requests:
              cpu: 75m
              memory: 200Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 568
            runAsNonRoot: true
            runAsUser: 568
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: data
              mountPath: /data
            - name: devshm
              mountPath: /dev/shm
            - name: shared
              mountPath: /shared
            - name: tmp
              mountPath: /tmp
            - name: varlogs
              mountPath: /var/logs
            - name: varrun
              mountPath: /var/run
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups:
          - 568
      volumes:
        - name: devshm
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: shared
          emptyDir: {}
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: varlogs
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: varrun
          emptyDir:
            medium: Memory
            sizeLimit: 2400Mi
        - name: data
          persistentVolumeClaim:
            claimName: lldap-data
---
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: lldap
    app.kubernetes.io/name: lldap
    pod.name: main
  ports:
    - name: main
      port: 17170
      targetPort: 17170
---
apiVersion: v1
kind: Service
metadata:
  name: lldap-ldap
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: lldap
    app.kubernetes.io/name: lldap
    pod.name: main
  ports:
    - name: ldap
      port: 3890
      targetPort: 3890
